[package]
name = "current"
version = "0.1.0"
authors = ["SalsaGal <fielddashos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.3", features = [ "image", "ttf", "unsafe_textures" ]}
rodio = "0.13.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.64"
