[package]
name = "current"
version = "1.0.1"
description = "A Rust game library built primarily off SDL2 with ease of use as its focus."
license = "MIT License"
authors = ["SalsaGal <fielddashos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.34.3", features = [ "image", "ttf", "unsafe_textures" ]}
rodio = "0.13.0"
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1.0.64"
